[workspace]
members = [
    "components/abciapp",
    "components/cli2",
    "components/contracts/baseapp",
    "components/contracts/modules/account",
    "components/contracts/modules/ethereum",
    "components/contracts/modules/evm",
    "components/contracts/modules/evm/precompile/basic",
    "components/contracts/modules/evm/precompile/modexp",
    "components/contracts/modules/evm/precompile/sha3fips",
    "components/contracts/modules/template",
    "components/contracts/primitives/core",
    "components/contracts/primitives/events",
    "components/contracts/primitives/evm",
    "components/contracts/primitives/storage",
    "components/contracts/primitives/traits",
    "components/contracts/primitives/rpc-core",
    "components/contracts/primitives/utils",
    "components/contracts/rpc",
    "components/ledger_api_service",
    "components/query_api",
    "components/query_server",
    "components/submission_api",
    "components/submission_server",
    "components/txn_builder",
    "components/wasm",
    "components/wallet",
    "components/fintools",
    "ledger",
    "libs/ads/air",
    "libs/ads/merkle_tree",
    "libs/ads/sparse_merkle_tree",
    "libs/bitmap",
    "libs/cryptohash",
    "libs/credentials",
    "libs/sliding_set",
    "libs/utils",
]

[profile.dev]
incremental = false
overflow-checks = true

[profile.release]
incremental = false
overflow-checks = false

[profile.bench]
codegen-units = 1
overflow-checks = false

[profile.dev.package.curve25519-dalek]
opt-level = 1
overflow-checks = false
