[workspace]
members = [
    "src/components/abciapp",
    "src/components/contracts/baseapp",
    "src/components/contracts/modules/account",
    "src/components/contracts/modules/ethereum",
    "src/components/contracts/modules/evm",
    "src/components/contracts/modules/evm/precompile/basic",
    "src/components/contracts/modules/evm/precompile/modexp",
    "src/components/contracts/modules/evm/precompile/sha3fips",
    "src/components/contracts/modules/template",
    "src/components/contracts/primitives/core",
    "src/components/contracts/primitives/events",
    "src/components/contracts/primitives/evm",
    "src/components/contracts/primitives/mocks",
    "src/components/contracts/primitives/storage",
    "src/components/contracts/primitives/traits",
    "src/components/contracts/primitives/types",
    "src/components/contracts/primitives/rpc-core",
    "src/components/contracts/primitives/rpc-server",
    "src/components/contracts/primitives/utils",
    "src/components/contracts/rpc",
    "src/components/wasm",
    "src/components/finutils",
    "src/ledger",
    "src/libs/ads/air",
    "src/libs/ads/merkle_tree",
    "src/libs/ads/sparse_merkle_tree",
    "src/libs/bitmap",
    "src/libs/cryptohash",
    "src/libs/credentials",
    "src/libs/sliding_set",
    "src/libs/utils",
]

[profile.dev]
incremental = false
overflow-checks = true

[profile.release]
incremental = false
overflow-checks = false

[profile.bench]
codegen-units = 1
overflow-checks = false

[profile.dev.package.curve25519-dalek]
opt-level = 1
overflow-checks = false
