[package]
name = "fintools"
version = "0.1.0"
authors = ["FindoraNetwork"]
edition = "2018"

[[bin]]
name = "fns"
path = "src/fns/bins/fns.rs"

[[bin]]
name = "stt"
path = "src/fns/bins/stt.rs"

[[bin]]
name = "staking_cfg_generator"
path = "src/fns/bins/cfg_generator.rs"

[dependencies]
wallet = { path = "../wallet" }
ledger = { path = "../../ledger" }
utils = { path = "../../libs/utils" }
txn_builder = { path = "../txn_builder" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }

hex = "0.4.2"
base64 = "0.10"
clap = "2.33.3"
lazy_static = "1.4.0"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
attohttpc = { version = "0.16.3", default-features = false, features = ["compress", "json", "tls-rustls"] }
serde_json = "1.0.40"
serde = { version = "1.0.124", features = ["derive"] }

promptly = "0.3.0"

[features]
abci_mock = [ "ledger/abci_mock" ]
debug_env = [ "ledger/debug_env" ]
