[package]
name = "baseapp"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Base application for tendermint abci"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ethereum = { version = "0.7.1", features = ["with-serde"] }
ethereum-types = "0.11.0"
merk = { git = "https://github.com/FindoraNetwork/merk.git", branch = "merk_fra" }
parking_lot = "0.11.1"
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.40"
storage = { git = "ssh://git@github.com/FindoraNetwork/storage.git", branch = "master" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }

# primitives
fp-core = { path = "../primitives/core" }

# modules
module-account = { path = "../modules/account"}
module-ethereum = { path = "../modules/ethereum"}
module-evm = { path = "../modules/evm"}

ledger = { path = "../../../ledger" }
