[package]
name = "baseapp"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Base application for tendermint abci"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ethereum = { version = "0.7.1", features = ["with-serde"] }
ethereum-types = "0.11.0"
ledger = { path = "../../../ledger" }
log = "0.4"
parking_lot = "0.11.1"
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
protobuf = "2.23"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.40"
storage = { git = "ssh://git@github.com/FindoraNetwork/storage.git", branch = "develop" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }

# primitives
fp-core = { path = "../primitives/core" }
fp-evm = { path = "../primitives/evm" }
fp-traits = { path = "../primitives/traits" }
fp-utils = { path = "../primitives/utils" }

# modules
module-account = { path = "../modules/account"}
module-ethereum = { path = "../modules/ethereum"}
module-evm = { path = "../modules/evm"}
module-template = { path = "../modules/template"}

evm-precompile-basic = { path = "../modules/evm/precompile/basic" }
evm-precompile-modexp = { path = "../modules/evm/precompile/modexp" }
evm-precompile-sha3fips = { path = "../modules/evm/precompile/sha3fips" }
