[package]
name = "fc-rpc"
version = "0.1.0"
authors = ["Findora <admin@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Ethereum RPC (web3) compatibility layer for Findora."
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
jsonrpc-http-server = "15.1.0"
log = "0.4.8"
ethereum-types = "0.11.0"
evm = "0.27.0"
fp-rpc-core = { path = "../primitives/rpc-core" }
ethereum = { version = "0.7.1", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"
serde_json = "1.0"

[features]
rpc_binary_search_estimate = []
