[package]
name = "eth_api_service"
version = "0.1.0"
authors = ["Jianwei Liu <jianwei@findora.org>"]
edition = "2018"
description = "Ethereum RPC API server."

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
jsonrpc-core = "15.0.0"
fc-rpc = { version = "2.0.0-dev", path = "../rpc" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }

[build-dependencies]
vergen = "=3.1.0"
