[package]
name = "module-account"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora module supporting smart account function"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ledger = { path = "../../../../ledger" }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }
log = "0.4"

# primitives
fp-core = { path = "../../primitives/core" }
fp-storage = { path = "../../primitives/storage" }
fp-traits = { path = "../../primitives/traits" }
