[package]
name = "module-account"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora module supporting smart account function"
readme = "README.md"

[dependencies]
abci = { git = "https://github.com/FindoraNetwork/rust-abci.git", branch = "feat-findora" }
ledger = { path = "../../../../ledger" }
log = "0.4"
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "b2a_integ" }

# primitives
fp-core = { path = "../../primitives/core" }
fp-storage = { path = "../../primitives/storage" }
fp-traits = { path = "../../primitives/traits" }
