[package]
name = "module-evm"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora module supporting evm smart contract"
readme = "README.md"

[dependencies]
abci = { git = "https://github.com/FindoraNetwork/rust-abci.git", branch = "feat-findora" }
ethereum-types = "0.11.0"
evm = { version = "0.27.0", features = ["with-serde"] }
evm-runtime = "0.27.0"
evm-gasometer = "0.27.0"
log = "0.4"
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
rlp = "0.5"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
sha3 = "0.8"

# primitives
fp-core = { path = "../../primitives/core" }
fp-evm = { path = "../../primitives/evm" }
fp-storage = { path = "../../primitives/storage" }
fp-traits = { path = "../../primitives/traits" }

[dev-dependencies]
baseapp = { path = "../../baseapp" }
ethabi = "14.1.0"
ethereum = { version = "0.7.1", features = ["with-serde"] }
fp-utils = { path = "../../primitives/utils" }
git2 = "0.13"
hex = "0.4.2"
lazy_static = "1.4.0"
ledger = { path = "../../../../ledger" }
module-account = { path = "../account" }
module-ethereum = { path = "../ethereum" }
serde_json = "1.0.64"
