[package]
name = "module-template"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora template module for value store"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"

# primitives
fp-core = { path = "../../primitives/core" }
fp-storage = { path = "../../primitives/storage" }

[dev-dependencies]
baseapp = { path = "../../baseapp" }
hex = "0.4.2"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
rand_chacha = "0.2.0"
storage = { git = "ssh://git@github.com/FindoraNetwork/storage.git", branch = "master" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }
