[package]
name = "module-template"
version = "0.1.0"
authors = ["Findora <admin@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora template module for value store"
readme = "README.md"

[dependencies]
abci = { git = "https://github.com/FindoraNetwork/rust-abci.git", branch = "feat-findora" }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"

# primitives, don't depend on any modules
fp-core = { path = "../../primitives/core" }
fp-storage = { path = "../../primitives/storage" }

[dev-dependencies]
fp-mocks = { path = "../../primitives/mocks" }
fp-traits = { path = "../../primitives/traits" }
module-account = { path = "../../modules/account" }
