[package]
name = "module-template"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora template module for value store"
readme = "README.md"

[dependencies]
abci = { git = "https://github.com/FindoraNetwork/rust-abci.git", branch = "feat-findora" }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"

# primitives
fp-core = { path = "../../primitives/core" }
fp-storage = { path = "../../primitives/storage" }

[dev-dependencies]
baseapp = { path = "../../baseapp" }
fp-utils = { path = "../../primitives/utils" }
hex = "0.4.2"
lazy_static = "1.4.0"
rand_chacha = "0.2.0"
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", branch = "develop" }
