[package]
name = "fp-core"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora Primitive core types"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ethereum-types = "0.11.0"
hex = "0.4.2"
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
named_type = "0.2.2"
named_type_derive = "0.2.2"
parking_lot = "0.11.1"
protobuf = "2.23"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
storage = { git = "ssh://git@github.com/FindoraNetwork/storage.git", branch = "master" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }

[dev-dependencies]
rand_chacha = "0.2.0"
