[package]
name = "fp-core"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora Primitive core types"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
base64 = "0.10"
ethereum-types = "0.11.0"
hex = "0.4.2"
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
named_type = "0.2.2"
named_type_derive = "0.2.2"
parking_lot = "0.11.1"
protobuf = "2.23"
rand = "0.7.2"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.8"
storage = { git = "ssh://git@github.com/FindoraNetwork/storage.git", branch = "master" }
substrate-bip39 = "0.4.2"
tiny-bip39 = "0.8"
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
ledger = { path = "../../../../ledger" }

[dev-dependencies]
hex-literal = "0.3.1"
rand_chacha = "0.2.0"
