[package]
name = "fp-mocks"
version = "0.1.0"
authors = ["Findora <admin@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora primitive mock functions for testing"

[dependencies]
baseapp = { path = "../../baseapp" }
lazy_static = "1.4.0"
ledger = { path = "../../../../ledger" }
rand_chacha = "0.2.0"
serde_json = "1.0"
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.3a" }

# primitives
fp-traits = { path = "../traits" }
fp-types = { path = "../types" }
fp-utils = { path = "../utils" }

# modules
module-account = { path = "../../modules/account" }

