[package]
name = "fp-traits"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora Primitive Trait definitions for all module interactions"
readme = "README.md"

[dependencies]
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "b2a_integ" }

# primitives
fp-core = { path = "../core" }