[package]
name = "fp-utils"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora Primitive utility functions"
readme = "README.md"

[dependencies]
ethereum = { version = "0.7.1", features = ["with-serde"] }
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
parking_lot = "0.11.1"
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
rlp = "0.5"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
storage = { git = "ssh://git@github.com/FindoraNetwork/storage.git", branch = "master" }
sha3 = "0.8"

# primitives
fp-core = { path = "../core" }
fp-traits = { path = "../traits" }
