[package]
name = "app_ethereum"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Ethereum transaction execute module for tendermint abci"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ethereum = { version = "0.7.1", features = ["with-serde"] }
ethereum-types = "0.11.0"
evm = { version = "0.27.0", features = ["with-serde"] }
merk = { git = "https://github.com/FindoraNetwork/merk.git", branch = "merk_fra" }
primitives = { path = "../../primitives" }
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
sha3 = "0.8"
storage = { git = "https://github.com/FindoraNetwork/storage.git", branch = "master" }

# modules
app_evm = { path = "../evm"}