[package]
name = "baseapp"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Base application for tendermint abci"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ethereum = { version = "0.7.1", features = ["with-serde"] }
ethereum-types = "0.11.0"
primitives = { path = "../primitives" }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.40"

# modules
app_ethereum = { path = "../modules/ethereum"}
app_evm = { path = "../modules/evm"}
