[package]
name = "primitives"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Primitive types for application"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
ethereum-types = "0.11.0"
hex = "0.4.2"
libsecp256k1 = "0.3.5"
parking_lot = "0.11.1"
protobuf = "2.23"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
storage = { git = "https://github.com/FindoraNetwork/storage.git", branch = "master" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", tag = "v0.1.2" }
