[package]
name = "module-template"
version = "0.1.0"
authors = ["Findora <admin@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora template module for value store"
readme = "README.md"

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
tm-protos = { git = "ssh://git@github.com/FindoraNetwork/tendermint-sys.git", branch = "findora-0.33.6" }

# primitives, don't depend on any modules
fp-core = { path = "../../primitives/core" }
fp-storage = { path = "../../primitives/storage" }
fp-types = { path = "../../primitives/types" }

[dev-dependencies]
fp-mocks = { path = "../../primitives/mocks" }
fp-traits = { path = "../../primitives/traits" }
module-account = { path = "../../modules/account" }
