[package]
name = "fp-events"
version = "0.1.0"
authors = ["Findora <admin@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "Findora Primitive transaction events"
readme = "README.md"

[dependencies]
fp-event-derive = { path = "event-derive" }
serde_json = "1.0"
tm-protos = { git = "ssh://git@github.com/FindoraNetwork/tendermint-sys.git", branch = "findora-0.33.6" }

[dev-dependencies]
serde = { version = "1.0.124", features = ["derive"] }
