[package]
name = "app_evm"
version = "0.1.0"
authors = ["Findora <tyler@findora.org>"]
edition = "2018"
homepage = "https://findora.org/technology"
repository = "https://github.com/findoranetwork/platform/"
description = "EVM application module for tendermint abci"
readme = "README.md"

[dependencies]
abci = { git = "https://gitee.com/kt10/rust-abci.git", branch = "feat-findora" }
evm = { version = "0.27.0", features = ["with-codec"] }
evm-runtime = "0.27.0"
evm-gasometer = "0.27.0"
primitives = { path = "../../primitives" }
primitive-types = { version = "0.9.0", features = ["rlp", "byteorder"] }
rlp = "0.5"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
sha3 = "0.8"
